--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,6 @@ body {
 </style>
 </head>
 <body>
-	<a href="website.html">Link zur Abgabe</a>
+	<a href="website.html" target="_blank">Link zur Abgabe</a>
 </body>
 </html>
