--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,8 @@ body {
 </style>
 </head>
 <body>
-	<a href="website.html" target="_blank">Aufgabe 00, 22.04.2020</a>
+	<a href="https://HannahSchmitt/github.io/GIS-SoSe-2020/Aufgabe00/index.html" target="_blank">Aufgabe 00, 22.04.2020</a>
+	<a href="https://HannahSchmitt/github.io/GIS-SoSe-2020/Aufgabe01/index.html" target="_blank">Aufgabe 01, 29.04.2020</a>
+
 </body>
 </html>
