--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,9 +12,9 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://schmitthannah.github.io/GIS-SoSe-2020/Aufgabe00/index.html" target="_blank">Aufgabe 00, 22.04.2020</a>
+	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe00/index.html" target="_blank">Aufgabe00, 22.04.2020</a>
 	<p></p>
-	<a href="https://schmitthannah.github.io/GIS-SoSe-2020/Aufgabe01/index.html" target="_blank">Aufgabe 01, 29.04.2020</a>
+	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe01/index.html" target="_blank">Aufgabe01, 29.04.2020</a>
 
 </body>
 </html>
