--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -12,7 +12,9 @@ body {
 </style>
 </head>
 <body>
-    <h1>Meine Überschrift</h1>
-    <p>Hallo, das ist mein Text </p>
+    <h1>Herzlich Willkommen</h1>
+	<p><h2>Hallo, ich bin Hannah Schmitt</h2></p>
+	<img src = "HannahSchmitt.jpeg"/>
+	
 </body>
 </html>
