--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -12,13 +12,17 @@ body {
 </style>
 </head>
 <body>
-	<img src = "HannahSchmitt.jpeg"/>
+	<meta charset="ISO-8859-1">
+	<img src="HannahSchmitt.jpeg"/>
     <h1>Herzlich Willkommen</h1>
-	<p><h2>Hallo, ich bin Hannah Schmitt</h2></p>
+	<p><h4>Hallo, ich bin Hannah Schmitt</h4></p>
 	<p>Ich studiere, wie alle hier, an der HFU in Furtwangen und bin im zweiten Semester OMB.</p>
-	<p>Hier kommst Du zu meinen Buddys:</p>
-	<a href = "https://vinnipoo.github.io/GIS_SoSe2020/Aufgabe01/index.html">Vincent</a>
-	<a href = "https://maltehuebel.github.io/GIS_SoSe2020/Aufgabe01/index.html">Malte</a>
-	<a href = "https://sandra98p.github.io/GIS-SoSe-2020/Aufgabe01/index.html">Sandra</a>
+	<p></p>
+	<p><em>Hier kommst Du zu meinen Buddys:</em></p>
+	<a href="https://vinnipoo.github.io/GIS_SoSe2020/Aufgabe01/index.html">Vincent</a>
+	<a href="https://maltehuebel.github.io/GIS_SoSe2020/Aufgabe01/index.html">Malte</a>
+	<a href="https://sandra98p.github.io/GIS-SoSe-2020/Aufgabe01/index.html">Sandra</a>
+
+
 </body>
 </html>
