--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -13,15 +13,19 @@ body {
 </head>
 <body>
 	<meta charset="ISO-8859-1">
-	<img src="HannahSchmitt.jpeg"/>
+	
     <h1>Herzlich Willkommen</h1>
-	<p><h4>Hallo, ich bin Hannah Schmitt</h4></p>
+	<img src="HannahSchmitt.jpeg"/>
+	<p><h4>Ich bin Hannah Schmitt, bin 21 Jahre alt und komme aus dem schönen 
+		<a href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Weinort </a>
+		<a href="https://www.kappelrodeck.de/de/startseite/">Kappelrodeck</a>.</h4></p>
+	<p></p>
 	<p>Ich studiere, wie alle hier, an der HFU in Furtwangen und bin im zweiten Semester OMB.</p>
 	<p></p>
-	<p><em>Hier kommst Du zu meinen Buddys:</em></p>
-	<a href="https://vinnipoo.github.io/GIS_SoSe2020/Aufgabe01/index.html">Vincent</a>
-	<a href="https://maltehuebel.github.io/GIS_SoSe2020/Aufgabe01/index.html">Malte</a>
-	<a href="https://sandra98p.github.io/GIS-SoSe-2020/Aufgabe01/index.html">Sandra</a>
+	<p><h4>Hier kommst Du zu meinen Buddies:</h4></p>
+	<p>Hier kommst Du zu: <a href="https://vinnipoo.github.io/GIS_SoSe2020/Aufgabe01/index.html"><em>Vincent</em></a></p>
+	<p>Hier kommst Du zu: <a href="https://maltehuebel.github.io/GIS_SoSe2020/Aufgabe01/index.html"><em>Malte</em></a></p>
+	<p>Hier kommst Du zu: <a href="https://sandra98p.github.io/GIS-SoSe-2020/Aufgabe01/index.html"><em>Sandra</em></a></p>
 
 
 </body>
