--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -11,7 +11,7 @@ body {
 }
 </style>
 </head>
-<body>
+<body background-color=#F6E3CE>
 	<meta charset="ISO-8859-1">
 	
     <h1>Herzlich Willkommen</h1>
@@ -20,12 +20,20 @@ body {
 		<a href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Weinort </a>
 		<a href="https://www.kappelrodeck.de/de/startseite/">Kappelrodeck</a>.</h4></p>
 	<p></p>
-	<p>Ich studiere, wie alle hier, an der HFU in Furtwangen und bin im zweiten Semester OMB.</p>
 	<p></p>
-	<p><h4>Hier kommst Du zu meinen Buddies:</h4></p>
+	<p>Ich studiere, wie alle hier, an der <a href="https://www.hs-furtwangen.de">HFU</a> in Furtwangen und bin im zweiten Semester OMB.</p>
+	<p></p>
+	<p><h3>Hier kommst Du zu meinen Buddies:</h3></p>
 	<p>Hier kommst Du zu: <a href="https://vinnipoo.github.io/GIS_SoSe2020/Aufgabe01/index.html"><em>Vincent</em></a></p>
 	<p>Hier kommst Du zu: <a href="https://maltehuebel.github.io/GIS_SoSe2020/Aufgabe01/index.html"><em>Malte</em></a></p>
 	<p>Hier kommst Du zu: <a href="https://sandra98p.github.io/GIS-SoSe-2020/Aufgabe01/index.html"><em>Sandra</em></a></p>
+
+
+	<p></p>
+	<p></p>
+	<a href="#">Hier kommst Du zum Seitenanfang</a>
+
+	
 
 
 </body>
