--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -7,11 +7,11 @@
 body {
 	font-family: arial;
 	font-size: small;
-	background: #eeeeee
+	background: #d88888
 }
 </style>
 </head>
-<body background-color=#F6E3CE>
+<body>
 	<meta charset="ISO-8859-1">
 	
     <h1>Herzlich Willkommen</h1>
@@ -27,7 +27,30 @@ body {
 	<p>Hier kommst Du zu: <a href="https://vinnipoo.github.io/GIS_SoSe2020/Aufgabe01/index.html"><em>Vincent</em></a></p>
 	<p>Hier kommst Du zu: <a href="https://maltehuebel.github.io/GIS_SoSe2020/Aufgabe01/index.html"><em>Malte</em></a></p>
 	<p>Hier kommst Du zu: <a href="https://sandra98p.github.io/GIS-SoSe-2020/Aufgabe01/index.html"><em>Sandra</em></a></p>
-
+	<p>Hier kommst Du zu: <a href="https://Tina-bmg.github.io/GIS-SoSe2020/Aufgabe01/index.html"><em>Tina</em></a></p>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	</b>
+	<img src="Wein.jpg"/>
 	<a href="#">Hier kommst Du zum Seitenanfang</a>
 
 	
