--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -15,7 +15,7 @@ body {
 	<meta charset="ISO-8859-1">
 	
     <h1>Herzlich Willkommen</h1>
-	<img src="HannahSchmitt.jpeg"/>
+	<img src="HannahSchmitt.jpg"/>
 	<p><h4>Ich bin Hannah Schmitt, bin 21 Jahre alt und komme aus dem schönen 
 		<a href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Weinort </a>
 		<a href="https://www.kappelrodeck.de/de/startseite/">Kappelrodeck</a>.</h4></p>
@@ -23,6 +23,8 @@ body {
 	
 	<p>Ich studiere, wie alle hier, an der <a href="https://www.hs-furtwangen.de">HFU</a> in Furtwangen und bin im zweiten Semester OMB.</p>
 	<p></p>
+	<br>
+	<br>
 	<p><h3>Hier kommst Du zu meinen Buddies:</h3></p>
 	<p>Hier kommst Du zu: <a href="https://vinnipoo.github.io/GIS_SoSe2020/Aufgabe01/index.html"><em>Vincent</em></a></p>
 	<p>Hier kommst Du zu: <a href="https://maltehuebel.github.io/GIS_SoSe2020/Aufgabe01/index.html"><em>Malte</em></a></p>
@@ -32,25 +34,8 @@ body {
 	<br>
 	<br>
 	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	</b>
-	<img src="Wein.jpg"/>
+	<img src="Weinberge.jpg"/>
+	<p></p>
 	<a href="#">Hier kommst Du zum Seitenanfang</a>
 
 	
