--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -19,10 +19,12 @@ body {
 	<p><h4>Ich bin Hannah Schmitt, bin 21 Jahre alt und komme aus dem schönen 
 		<a href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Weinort </a>
 		<a href="https://www.kappelrodeck.de/de/startseite/">Kappelrodeck</a>.</h4></p>
-	<p></p>
+	<p>Wenn Du weiter <a href="#Bild">nach unten</a> gehst kannst Du Dir ein Bild davon machen</p>
+	<p><h2>Meine Uni</h2></p>
+	<p>Ich studiere, wie alle hier, an der...
+	<p><a href="https://www.hs-furtwangen.de"><img src="HannahSchmitt.jpg"/></a></p>
+	<p>...in Furtwangen und bin im zweiten Semester OMB.</p>
 	
-	<p>Ich studiere, wie alle hier, an der <a href="https://www.hs-furtwangen.de">HFU</a> in Furtwangen und bin im zweiten Semester OMB.</p>
-	<p></p>
 	<br>
 	<br>
 	<p><h3>Hier kommst Du zu meinen Buddies:</h3></p>
@@ -34,6 +36,7 @@ body {
 	<br>
 	<br>
 	<br>
+	<a href="Bild">Und schon kannst Du Dir ein Bild von meiner Heimat machen.</a>
 	<img src="Weinberge.jpg"/>
 	<p></p>
 	<a href="#">Hier kommst Du zum Seitenanfang</a>
