--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -16,10 +16,18 @@ body {
 	
     <h1>Herzlich Willkommen</h1>
 	<img src="HannahSchmitt.jpg"/>
-	<p><h4>Ich bin Hannah Schmitt, bin 21 Jahre alt und komme aus dem schönen 
-		<a href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Weinort </a>
-		<a href="https://www.kappelrodeck.de/de/startseite/">Kappelrodeck</a>.</h4></p>
+	<p><h4>Ich bin Hannah Schmitt</h4></p>
+	<p>bin 21 Jahre alt und komme aus dem schönen</p> 
+	<a href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Weinort </a>
+	<a href="https://www.kappelrodeck.de/de/startseite/">Kappelrodeck</a>.</h4></p>
 	<p>Wenn Du weiter <a href="Weinberge.jpg">nach unten</a> gehst kannst Du Dir ein Bild davon machen</p>
+	<br>
+	<br>
+	<h2>Meine Freizeit</h2>
+	<p>Ich spiele schon seit meiner Grundschulzeit Volleyball beim <a href="https://www.tv-kappelrodeck.de/category/volleyball/damen-1/">TVKappelrodeck</a>, durch das Studium musste ich das leider aufgeben.
+	<p>Ansonsten reise ich sehr gerne und sehr viel</p>
+	<p>Hier seht Ihr ein paar Bilder von mir :)</p>
+	<p><img src="London.jpg"/><img src="Malediven.jpg"/><img src="Hobbiton.jpg"/></p>
 	<p><h2>Meine Uni</h2></p>
 	<p>Ich studiere, wie alle hier, an der...
 	<p><a href="https://www.hs-furtwangen.de"><img src="HFU.png"/></a></p>
@@ -36,9 +44,6 @@ body {
 	<br>
 	<br>
 	<br>
-	<h2>Und schon kannst Du Dir ein Bild von meiner Heimat machen.</h2>
-	<img src="Weinberge.jpg"/>
-	<p></p>
 	<a href="#">Hier kommst Du zum Seitenanfang</a>
 
 	
