--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -17,7 +17,7 @@ body {
     <h1>Herzlich Willkommen</h1>
 	<img src="HannahSchmitt.jpg"/>
 	<p><h2>Ich bin Hannah Schmitt</h2></p>
-	<p>bin 21 Jahre alt und komme aus dem schönen</p> 
+	<p>bin 21 Jahre alt und komme aus dem schönen
 	<a href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Weinort </a>
 	<a href="https://www.kappelrodeck.de/de/startseite/">Kappelrodeck</a>.</h4></p>
 	<p>Wenn Du weiter <a href="Weinberge.jpg">nach unten</a> gehst kannst Du Dir ein Bild davon machen</p>
