--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -31,7 +31,7 @@ body {
 	<p><h2>Meine Uni</h2></p>
 	<p>Ich studiere, wie alle hier, an der...
 	<p><a href="https://www.hs-furtwangen.de"><img src="HFU.png"/></a></p>
-	<p>...in Furtwangen und bin im zweiten Semester OMB.</p>
+	<p>...und bin im zweiten Semester OMB.</p>
 	
 	<br>
 	<br>
