--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -20,7 +20,7 @@ body {
 	<p>bin 21 Jahre alt und komme aus dem schönen
 	<a href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Weinort </a>
 	<a href="https://www.kappelrodeck.de/de/startseite/">Kappelrodeck</a>.</h4></p>
-	<p>Wenn Du weiter <a href="Weinberge.jpg">nach unten</a> gehst kannst Du Dir ein Bild davon machen</p>
+	<p>Wenn Du <a href="Weinberge.jpg">hier drauf klickst</a> siehst Du ein Bild meiner Heimat.</p>
 	<br>
 	<br>
 	<h2>Meine Freizeit</h2>
