--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,8 +12,8 @@ body {
 </style>
 </head>
 <body>
-	<p><a href="https://github.com/HannahSchmitt/GIS-SoSe-2020" target="_blank">Issues</a></p>
-	<p>><a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe01/index.html" target="_blank">Aufgabe01, 29.04.2020</a></p>
-	<p><a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe00/index.html" target="_blank">Aufgabe00, 22.04.2020</a></p>
+	<p><a href="https://github.com/HannahSchmitt/GIS-SoSe-2020" target="_blank">Issues</a>
+	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe01/index.html" target="_blank">Aufgabe01, 29.04.2020</a>
+	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe00/index.html" target="_blank">Aufgabe00, 22.04.2020</a></p>
 </body>
 </html>
