--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -14,7 +14,7 @@ body {
 <body>
 	<meta charset="ISO-8859-1">
 	
-    <h1>Herzlich Willkommen</h1>
+    <h1 id="überschrift"> Herzlich Willkommen</h1>
 	<img src="HannahSchmitt.jpg"/>
 	<p><h2>Ich bin Hannah Schmitt</h2></p>
 	<p>bin 21 Jahre alt und komme aus dem schönen
@@ -43,7 +43,27 @@ body {
 	<br>
 	<br>
 	<br>
-	<a href="#">Hier kommst Du zum Seitenanfang</a>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<p><a href="#überschrift"><img src="Swipe-Up.gif"/></a></p>
 
 	
 
