--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -19,14 +19,15 @@ body {
 	<img src="HannahSchmitt.jpg"/>
 	<p><h2>Ich bin Hannah Schmitt</h2></p>
 	<p>bin 21 Jahre alt und komme aus dem schönen
-	<a href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Weinort </a>
-	<a href="https://www.kappelrodeck.de/de/startseite/">Kappelrodeck</a>.</h4></p>
+	
+	<a href="https://www.kappelrodeck.de/de/startseite/">Kappelrodeck</a></h4>, wir sind für unseren edlen und leckeren <a href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Wein </a>bekannt.</p>
 	<p>Wenn Du <a href="Weinberge.jpg">hier drauf klickst</a> siehst Du ein Bild meiner Heimat.</p>
 	<br>
 	<br>
 	<h2>Meine Freizeit</h2>
 	<p>Ich spiele schon seit meiner Grundschulzeit Volleyball beim <a href="https://www.tv-kappelrodeck.de/category/volleyball/damen-1/">TVKappelrodeck</a>, durch das Studium musste ich das leider aufgeben.
 	<p>Ansonsten reise ich sehr gerne und sehr viel</p>
+	<p><a href="https://www.youtube.com/channel/UCWGQne-rwXOrI4EXZf7lvPg/videos">#Support your friends</a></p>
 	<p>Hier seht Ihr ein paar Bilder von mir :)</p>
 	<p><img src="London.jpg"/><img src="Malediven.jpg"/><img src="Hobbiton.jpg"/></p>
 	<p><h2>Meine Uni</h2></p>
