--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,7 +13,8 @@ body {
 </head>
 <body>
 	<a href="https://github.com/HannahSchmitt/GIS-SoSe-2020" target="_blank">Issues</a><br>
-	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe02/Portfolio.html" target="_blank">Aufgabe02, 13.05.2020</a><br>
+	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe02/Portfolio.html" target="_blank">Aufgabe02, 13.05.2020</a> 
+	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/tags_used/Tags.html" target="_blank">Tags used</a><br>
 	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe01/index.html" target="_blank">Aufgabe01, 29.04.2020</a><br>
 	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe00/index.html" target="_blank">Aufgabe00, 22.04.2020</a>
 </body>
