--- a/tags_used/Tags.html
+++ b/tags_used/Tags.html
@@ -115,12 +115,6 @@
 				<td>&#10003;</td>
 			</tr>
 			<tr>
-				<td>&lt;span&gt;</td>
-				<td>&#10003;</td>
-				<td>&#10003;</td>
-				<td>&#10007;</td>
-			</tr>
-			<tr>
 				<td>&lt;source&gt;</td>
 				<td>&#10003;</td>
 				<td>&#10003;</td>
@@ -135,13 +129,43 @@
 			<tr>
 				<td>&lt;div&gt;</td>
 				<td>&#10007;</td>
-				<td>&#10007;</td>
+				<td>&#10003;</td>
 				<td>&#10003;</td>
 			</tr>
 			<tr>
 				<td>&lt;i&gt;</td>
 				<td>&#10003;</td>
 				<td>&#10007;</td>
+				<td>&#10003;</td>
+			</tr>
+			<tr>
+				<td>&lt;meta&gt;</td>
+				<td>&#10007;</td>
+				<td>&#10003;</td>
+				<td>&#10003;</td>
+			</tr>
+			<tr>
+				<td>&lt;tr&gt;</td>
+				<td>&#10007;</td>
+				<td>&#10003;</td>
+				<td>&#10007;</td>
+			</tr>
+			<tr>
+				<td>&lt;td&gt;</td>
+				<td>&#10007;</td>
+				<td>&#10003;</td>
+				<td>&#10007;</td>
+			</tr>
+			<tr>
+				<td>&lt;tbody&gt;</td>
+				<td>&#10007;</td>
+				<td>&#10003;</td>
+				<td>&#10007;</td>
+			</tr>
+			<tr>
+				<td>&lt;title&gt;</td>
+				<td>&#10007;</td>
+				<td>&#10003;</td>
 				<td>&#10007;</td>
 			</tr>
 
