--- a/Aufgabe02/AboutMe/About_Me.html
+++ b/Aufgabe02/AboutMe/About_Me.html
@@ -48,7 +48,7 @@
 				und leckeren <a
 					href="https://www.dasenstein.de/?gclid=Cj0KCQjwy6T1BRDXARIsAIqCTXrfCid2zxiJWMh97SsryjYS9wcNSn3iW7TQsw0hIJQSGcF0l8e8-nMaAl1eEALw_wcB">Wein
 				</a>bekannt.</p>
-			<p>Wenn Du <a href="Weinberge.jp">hier drauf klickst</a> siehst Du ein Bild meiner Heimat.</p>
+			<p>Wenn Du <a href="Weinberge.jpg">hier drauf klickst</a> siehst Du ein Bild meiner Heimat.</p>
 			<br>
 			<br>
 			<b>Meine Freizeit</b>
@@ -58,9 +58,10 @@
 				<p>Ansonsten reise ich sehr gerne und sehr viel</p>
 				<p><a href="https://www.youtube.com/channel/UCWGQne-rwXOrI4EXZf7lvPg/videos">#Support your friends</a>
 				</p>
-				<p>Hier seht Ihr ein paar Bilder von mir :)</p>
-				<p><img src="London.jp" alt="bild london" /><img src="Malediven.jpg" alt="bild Malediven" /><img
-						src="Hobbiton.jp" alt="Bild Hobbiton" /></p>
+				<p><i>Hier seht Ihr ein paar Bilder von mir :)</i></p>
+				<p><img src="London.jpg" alt="bild london" />
+					<img src="Malediven.jpg" alt="bild Malediven" />
+					<img src="Hobbiton.jpg" alt="Bild Hobbiton" /></p>
 				<p></p>
 				<br>
 				<br>
