--- a/Aufgabe02/Portfolio.html
+++ b/Aufgabe02/Portfolio.html
@@ -24,11 +24,11 @@
 				<h1 id="überschrift">Portfolio
 				</h1>
 				<h3>
-					<a href="http://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe02/Portfolio.html">Portfolio</a>
+					<a href="Aufgabe02/Portfolio.html">Portfolio</a>
 					&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="http://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe02/Contact/Contact.html">Contact</a>
+					<a href="Contact/Contact.html">Contact</a>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="http://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe02/AboutMe/About_Me.html">About Me</a>
+					<a href="AboutMe/About_Me.html">About Me</a>
 				</h3>
 				<hr>
 			</nav>
