--- a/Aufgabe02/AboutMe/About_Me.html
+++ b/Aufgabe02/AboutMe/About_Me.html
@@ -24,7 +24,7 @@
 			<h1 id="überschrift">About Me</h1>
 			<nav>
 				<h3>
-					<a href="Portfolio.html">Portfolio</a>
+					<a href="../Portfolio.html">Portfolio</a>
 					&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="Contact/Contact.html">Contact</a>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
