--- a/Aufgabe02/Contact/Contact.html
+++ b/Aufgabe02/Contact/Contact.html
@@ -25,11 +25,11 @@
 			<nav>
 				<h3>
 
-					<a href="Aufgabe02/Portfolio.html">Portfolio</a>
+					<a href="../Portfolio.html">Portfolio</a>
 					&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="Contact/Contact.html">Contact</a>
+					<a href="Contact.html">Contact</a>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="AboutMe/About_Me.html">About Me</a>
+					<a href="../AboutMe/About_Me.html">About Me</a>
 				</h3>
 			</nav>
 			<hr>
