--- a/Aufgabe02/AboutMe/About_Me.html
+++ b/Aufgabe02/AboutMe/About_Me.html
@@ -26,9 +26,9 @@
 				<h3>
 					<a href="../Portfolio.html">Portfolio</a>
 					&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="Contact/Contact.html">Contact</a>
+					<a href="../Contact/Contact.html">Contact</a>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="AboutMe/About_Me.html">About Me</a>
+					<a href="About_Me.html">About Me</a>
 				</h3>
 			</nav>
 			<hr>
