--- a/Aufgabe02/Portfolio.html
+++ b/Aufgabe02/Portfolio.html
@@ -24,7 +24,7 @@
 				<h1 id="überschrift">Portfolio
 				</h1>
 				<h3>
-					<a href="../Portfolio.html">Portfolio</a>
+					<a href="Portfolio.html">Portfolio</a>
 					&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="Contact/Contact.html">Contact</a>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
