--- a/Aufgabe03/Portfolio.html
+++ b/Aufgabe03/Portfolio.html
@@ -4,95 +4,84 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Portfolio - Hannah Schmitt</title>
-	<style>
-		body {
-			font-family: Cambria;
-			font-size: 20px;
-			background: #d18f8f
-		}
+	<link rel="stylesheet" href="Style.css">
 
-		.centered {
-			text-align: center
-		}
-	</style>
 </head>
 
 <body>
 	<header>
-		<div class="centered">
-			<nav>
-				<h1 id="überschrift">Portfolio
-				</h1>
-				<h3>
-					<a href="http://127.0.0.1:5500/Aufgabe02/Portfolio.html">Portfolio</a>
-					&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="http://127.0.0.1:5500/Aufgabe02/Contact/Contact.html">Contact</a>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="http://127.0.0.1:5500/Aufgabe02/AboutMe/About_Me.html">About Me</a>
-				</h3>
-				<hr>
-			</nav>
+		<nav class="topnav">
+			<h3 id="überschrift">
+				<a href="Portfolio.html" class="button" id="aktuell">Portfolio</a>
+				&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="Contact/Contact.html" class="button">Contact</a>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<a href="AboutMe/About_Me.html" class="button">About Me</a>
+			</h3>
+		</nav>
+		<div class="halbkreis">
+			<h1 class="headline">Portfolio
+			</h1>
+
 		</div>
 	</header>
 	<main>
-		<div class="centered">
-			<br><br><br><br>
-			<i>"Abenteuer beginnen im Kopf. Werden in der Welt lebendig und enden in Geschichten daheim."
-				<br> ~ Marlene Rybka ~ </i>
-			<br>
-			<br>
-			<br>
-			<video controls height="400" width="720">
-				<source src="" type="video/mp4">
-			</video>
-			<br>
-			<br>
-			Heute schon gute Laune gehabt?<br><br>
-			<audio controls>
-				<source src="If_I_Had_a_Chicken.mp3" type="audio/mp3">
-				Your browser does not support the audio element.
-			</audio>
-			<br>
-			<br>
-			Hier seht Ihr noch ein paar Arbeiten aus Computergrafik<br><br>
-			<img src="U_Boot.png" alt="Boot" />
-			<img src="Truhe.png" alt="Truhe" />
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-			<br>
-		</div>
+
+		<br><br><br><br>
+		<i>"Abenteuer beginnen im Kopf. Werden in der Welt lebendig und enden in Geschichten daheim."
+			<br> ~ Marlene Rybka ~ </i>
+		<br>
+		<br>
+		<br>
+		<video controls height="400" width="720">
+			<source src="Skydive 1.mov" type="video/mp4">
+		</video>
+		<br>
+		<br>
+		<p>Heute schon gute Laune gehabt?</p><br>
+		<audio controls>
+			<source src="If_I_Had_a_Chicken.mp3" type="audio/mp3">
+		<p>Your browser does not support the audio element.</p>
+		</audio>
+		<br>
+		<br>
+		<p>Hier seht Ihr noch ein paar Arbeiten aus Computergrafik</p><br>
+		<img src="U_Boot.png" alt="Boot" /> <br>
+		<img src="Truhe.png" alt="Truhe" />
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+
 
 	</main>
 	<footer>
 
-		<div class="centered">
-			<nav>
-				<h2>
-					Carpe
-					&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-					<a href="#überschrift"><img src="Swipe-Up.gif" alt="Bild SwipeUp" /></a>
-					&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-					Diem
-				</h2>
-			</nav>
-		</div>
+
 		<nav>
-			<p style="text-align:right;">
-				Hannah Schmitt &#169;2020
-			</p>
+			<h2>
+				Carpe
+				&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				<a href="#überschrift"><img src="Swipe-Up.gif" alt="Bild SwipeUp" /></a>
+				&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+				Diem
+			</h2>
+		</nav>
+
+		<nav>
+			<p> Hannah Schmitt &#169;2020 </p>
 		</nav>
 
 	</footer>
