--- a/Aufgabe03/Portfolio.html
+++ b/Aufgabe03/Portfolio.html
@@ -22,7 +22,7 @@
 		<div class="halbkreis">
 			<h1 class="headline">Portfolio
 			</h1>
-
+			<a href="https://bap.navigator.gmx.net/home?sid=e71215366a9d16a35bce7f9beff09d628288d1326225014e7bf43fcb177ec75b1376fa0344ee9cc70cf5d27c51d07ed1"><img src="Mailen.png" alt="Bild1" class="mail" /> </a>
 		</div>
 	</header>
 	<main>
@@ -34,7 +34,7 @@
 		<br>
 		<br>
 		<video controls height="400" width="720">
-			<source src="Skydive 1.mov" type="video/mp4">
+			<source src="Skydive.mov" type="video/mp4">
 		</video>
 		<br>
 		<br>
