--- a/Aufgabe03/AboutMe/About_Me.html
+++ b/Aufgabe03/AboutMe/About_Me.html
@@ -21,12 +21,13 @@
 		<div class="halbkreis">
 			<h1 class="headline" >About Me
 			</h1>
+			<a href="https://bap.navigator.gmx.net/home?sid=e71215366a9d16a35bce7f9beff09d628288d1326225014e7bf43fcb177ec75b1376fa0344ee9cc70cf5d27c51d07ed1"><img src="Mailen.png" alt="Bild1" class="mail" /> </a>
 		</div>
-
+		
 	</header>
 	<main>
 		
-			<img src="HannahSchmitt.jpg" alt="Bild Hannah" class="bildchild" class="bildparent"/>
+			<img src="HannahSchmitt.jpg" alt="Bild Hannah"/>
 			
 			<h3>Ich bin Hannah Schmitt</h3>
 			<br>
