--- a/Aufgabe04/Webseite.html
+++ b/Aufgabe04/Webseite.html
@@ -54,30 +54,30 @@
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
         </div>
         <div class="weinflaschen">
-            <h3> Steak trifft Wein </h3>
+            <h3> Steak trifft Wein Alde Gott</h3>
             <img src="SteakAG.jpg" alt="Weinglas">
             <p class="price"> Preis: 5.70€</p>
             <p class="bildtext"> Geil zu einem blutigen Steak </p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
+            <h3> Spätburgunder Alde Gott</h3>
             <img src="SpaetburgunderAG.jpg" alt="Weinglas">
             <p class="price"> Preis: 7.80€</p>
-            <p class="bildtext">Für schöne Soonnenuntergänge</p>
+            <p class="bildtext">Für gemeinsame Stunden</p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
+            <h3> Spätburgunder Qualitätswein Alde Gott</h3>
             <img src="SpaetburgunderQualiAG.jpg" alt="Weinglas">
             <p class="price"> Preis: 6.60€</p>
-            <p class="bildtext">Für schöne Soonnenuntergänge</p>
+            <p class="bildtext">Für schöne Sonnenuntergänge</p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
             
             
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
+            <h3> Spätburgunder Oberkircher Winzer</h3>
             <img src="spateburgunderOK.jpg" alt="Weinglas">
             <p class="price"> Preis: 5.90€</p>
             <p class="bildtext">Für schöne Soonnenuntergänge</p>
@@ -91,7 +91,7 @@
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
+            <h3> Cuvée Royal 2015 </h3>
             <img src="cuveeok.jpg" alt="Cuvee">
             <p class="price"> Preis: 34,90€</p>
             <p class="bildtext">Verzaubern Sie Ihre Frau mit einem edlen Tropfen</p>
@@ -106,7 +106,7 @@
             <h3> Rosé Qualitätswein </h3>
             <img src="Rose.jpg" alt="Weinglas">
             <p class="price"> Preis: 7.80€</p>
-            <p class="bildtext">Für schöne Soonnenuntergänge</p>
+            <p class="bildtext">Für schöne Sonnenuntergänge</p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
             <br><br>
         </div>
@@ -114,51 +114,51 @@
             <h2>Weißwein</h2>
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
+            <h3> Spätburgunder Weißherbst Trocken Alde Gott</h3>
             <img src="SpaetburgunderWeissherbstAG.jpg" alt="Weinglas">
             <p class="price"> Preis: 9.50€</p>
             <p class="bildtext"> Für tolle Sommerabende </p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
+            <h3> Grauburgunder Hex vom Dasenstein</h3>
             <img src="Grauburgunder.jpg" alt="Weinglas">
             <p class="price"> Preis: 5.70€</p>
-            <p class="bildtext">Für schöne Soonnenuntergänge</p>
+            <p class="bildtext">Für schöne Sonnenuntergänge</p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
+            <h3>Rivaner Hex vom Dasenstein</h3>
             <img src="MuellerThurgau.jpg" alt="Weinglas">
-            <p class="price"> Preis: 5.70€</p>
-            <p class="bildtext">Für schöne Soonnenuntergänge</p>
+            <p class="price"> Preis: 7.80€</p>
+            <p class="bildtext">Perfekt zu einem leichten Sommeressen</p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
+            <h3> Müller Thurgau Alde Gott</h3>
             <img src="MuellerThurgauAG.jpg" alt="Weinglas">
             <p class="price"> Preis: 5.70€</p>
-            <p class="bildtext">Für schöne Soonnenuntergänge</p>
+            <p class="bildtext">Für schöne Sonnenuntergänge</p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
+            <h3> Riesling Alde Gott</h3>
             <img src="RieslingAG.jpg" alt="Weinglas">
-            <p class="price"> Preis: 5.70€</p>
-            <p class="bildtext">Für schöne Soonnenuntergänge</p>
+            <p class="price"> Preis: 5.60€</p>
+            <p class="bildtext">Für schöne Sonnenuntergänge</p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
+            <h3> Rivander & Riesling Alde Gott</h3>
             <img src="RRAG.jpg" alt="Weinglas">
-            <p class="price"> Preis: 5.70€</p>
+            <p class="price"> Preis: 6.70€</p>
             <p class="bildtext">Für schöne Soonnenuntergänge</p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
         </div>
         <div class="weinflaschen">
-            <h3> Spätburgunder Weißherbst Trocken</h3>
-            <img src="Ruländer.jpg" alt="Weinglas">
-            <p class="price"> Preis: 5.70€</p>
+            <h3> Ruländer Spätlese Hex vom Dasenstein</h3>
+            <img src="Rulaender.jpg" alt="Weinglas">
+            <p class="price"> Preis: 9.50€</p>
             <p class="bildtext">Für schöne Soonnenuntergänge</p>
             <button onclick="alert('Gute Wahl getroffen')"> Einkaufswagen</button>
             <br>
