--- a/Aufgabe04/Webseite.html
+++ b/Aufgabe04/Webseite.html
@@ -14,13 +14,13 @@
 
     <header>
         <div class="headercontent">
-            <img src="wein.png" id="logo" alt="Logo Wein" width="100%">
+            <img src="wein.png" id="logo" alt="Logo Wein" width="100">
             <div class="logoname">
                 <h1 id="name">Wine O'Clock</h1>
             </div>
             <div id="akkordeon">
-                <a class="show" href="#akkordeon"><img src="menue-1.png" alt="dropdownicon" width="100%"></a>
-                <a class="hide" href="#"><img src="menue-1.png" alt="dropdownicon" width="100%"></a>
+                <a class="show" href="#akkordeon"><img src="menue-1.png" alt="dropdownicon" width="100"></a>
+                <a class="hide" href="#"><img src="menue-1.png" alt="dropdownicon" width="100"></a>
                 <div class="inhalt">
                 <a href="#">Start</a><br>
                 <a href="#rotwein">Rotwein</a><br>
@@ -30,7 +30,7 @@
                 </div>
                 <div id="einkaufswagen">
                     
-                    <a class="hide" href="#"><img src="einkaufswagen.png" alt="dropdownicon" width="75%"></a>
+                    <a class="hide" href="#"><img src="einkaufswagen.png" alt="dropdownicon" width="75"></a>
                     
                 </div>    
         </div>
