--- a/Aufgabe05/Webseite.html
+++ b/Aufgabe05/Webseite.html
@@ -13,9 +13,9 @@
     <header>
         <div class="headercontent">
             <div class="menue1">
-                <a href="#Hauptmenü">Hauptmenü</a>
-                <a href="#einkaufswagen">Einkaufswagen</a>
-                <a href="#Informationen">Informationen</a>
+                <a href="#Rotwein">Rotwein</a>
+                <a href="#Weißwein">Weißwein</a>
+                <a href="#Rose">Rosé</a>
             </div>
 
             <div class="logo">
