--- a/Aufgabe05/Webseite.html
+++ b/Aufgabe05/Webseite.html
@@ -26,7 +26,7 @@
                 <a href="#Rotwein">Rotwein</a>
                 <a href="#Weißwein">Weißwein</a>
                 <a href="#Rose">Rosé</a>
-                <img src="supermarkt.svg" alt="Einkaufswagen Bild" id="einkaufswagen">
+                <img src="supermarkt.svg" alt="Einkaufswagen Bild">
             </div>
 
         </div>
@@ -34,7 +34,7 @@
 
     <main>
         <div class="weinbild">
-            <img src="Bild1.jpg" alt="Weinbild" id="Weinbild" id="Hauptmenü">
+            <img src="Bild1.jpg" alt="Weinbild" id="Weinbild">
         </div>
 
         <div class="inhalt">
@@ -64,7 +64,7 @@
     </main>
     <footer>
         <div>
-            <p class="verfasser" id="Informationen">Hannah Schmitt</p>
+            <p class="verfasser">Hannah Schmitt</p>
         </div>
 
     </footer>
