--- a/Aufgabe05/Webseite.html
+++ b/Aufgabe05/Webseite.html
@@ -26,7 +26,7 @@
                 <a href="#Rotwein">Rotwein</a>
                 <a href="#Weißwein">Weißwein</a>
                 <a href="#Rose">Rosé</a>
-                <img src="supermarkt.svg" alt="Einkaufswagen Bild">
+                <img src="supermarkt.svg" alt="Einkaufswagen Bild" id="einkaufswagen">
             </div>
 
         </div>
@@ -64,7 +64,7 @@
     </main>
     <footer>
         <div>
-            <p class="verfasser">Hannah Schmitt</p>
+            <p class="verfasser" id="Informationen">Hannah Schmitt</p>
         </div>
 
     </footer>
