--- a/Aufgabe04_2/Webseite.html
+++ b/Aufgabe04_2/Webseite.html
@@ -12,9 +12,9 @@
     <header>
     <div class="headercontent">
         <div class="menue1">
-            <a href="Hauptmenü">Hauptmenü</a>
-            <a href="Einkaufswagen">Einkaufswagen</a>
-            <a href="Informationen">Informationen</a>
+            <a href="#rotwein">Rotwein</a>
+            <a href="#rose">Rosé</a>
+            <a href="#weißwein">Weißwein</a>
         </div>
 
         <div class="logo">
@@ -93,7 +93,7 @@
     </div>
      <div class="sectionheading">
         <a id="weißwein">
-        <p>Weißwein</p>
+        <h2>Weißwein</h2>
         </a>
     </div>
     <div class="weinflaschen">
@@ -149,7 +149,7 @@
     </div>
     <div class="sectionheading">
         <a id="rose"></a>
-        <p>Rosé</p>
+        <h2>Rosé</h2>
     </div>
     <div class="weinflaschen">
         <h3> Rosé Qualitätswein </h3>
