--- a/Aufgabe05/Webseite.html
+++ b/Aufgabe05/Webseite.html
@@ -37,26 +37,20 @@
             <img src="Bild1.jpg" alt="Weinbild" id="Weinbild">
         </div>
 
-        <div class="inhalt">
-                <br>
-                <h2 id="Rotwein">Rotwein</h2>
-                <br>            
+        <div class="Inhalt">
+                <h2 id="Rotwein">Rotwein</h2>            
             <div id="rotwein">
             </div>
         </div>
 
-        <div class="inhalt">
-                <br>
-                <h2 id="Weißwein">Weißwein</h2>
-                <br>            
+        <div class="Inhalt">
+                <h2 id="Weißwein">Weißwein</h2>           
             <div id="weißwein">
             </div>
         </div>
 
-        <div class="inhalt">
-                <br>
-                <h2 id="Rose">Rosé</h2>
-                <br>           
+        <div class="Inhalt">
+                <h2 id="Rose">Rosé</h2>          
             <div id="rose">
             </div>
         </div>
