--- a/Aufgabe06/Webseite.html
+++ b/Aufgabe06/Webseite.html
@@ -19,11 +19,10 @@
             </div>
 
             <div class="logo">
-                <img src="wein.svg" alt="Logo Bild" id="logo" >
+                <a href="webseite.html"> <img src="wein.svg" alt="Logo Bild" id="logo"></a>
             </div>
 
             <div class="menue2">
-               
                 <img src="supermarkt.svg" alt="Einkaufswagen Bild" id="einkaufswagen">
                 <div id="produktBubble"></div>
             </div>
