--- a/Aufgabe06/Webseite.html
+++ b/Aufgabe06/Webseite.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="logo">
-                <a href="webseite.html"> <img src="wein.svg" alt="Logo Bild" id="logo"></a>
+                <a href="Webseite.html"> <img src="wein.svg" alt="Logo Bild" id="logo"></a>
             </div>
 
             <div class="menue2">
