Aufgabe_7 ohne CSS

--- a/Aufgabe07/Warenkorb.html
+++ b/Aufgabe07/Warenkorb.html
@@ -19,40 +19,18 @@
                 <img src="supermarkt.svg" alt="Einkaufswagen Bild" id="einkaufswagen2">
                 <div id="produktBubble"></div>
             </div>
+            <div>
+                <p id="total"></p>
+            </div>
         </div>
 
     </header>
 
     <main>
-        <div class="warenliste">
-
-            <div class="list-item">
-                <div class="item-image">
-                    <img src="spateburgunderOK.jpg">
-                </div>
-                <div class="item-name">
-                    <p>Spätburgunder Herbst Faszination</p>
-                </div>
-                <div class="item-price">
-                    <p>6,99 €</p>
-                </div>
-            </div>
-
-            <div class="list-item">
-                <div class="item-image">
-                    <img src="spateburgunderOK.jpg">
-                </div>
-                <div class="item-name">
-                    <p>Spätburgunder Herbst Faszination</p>
-                </div>
-                <div class="item-price">
-                    <p>6,99 €</p>
-                </div>
-            </div>
-
-           
+        <div class="weinbild">
         </div>
- <p id="total">35,99 €</p>
+        <div class="warenliste">
+        </div>
     </main>
     <footer>
         <div>
