--- a/Aufgabe07/Warenkorb.html
+++ b/Aufgabe07/Warenkorb.html
@@ -15,20 +15,22 @@
             <div class="logo2">
                 <a href="Webseite.html"> <img src="wein.svg" alt="Logo Bild" id="logo2"></a>
             </div>
+            <div>
+                <h2>Wine O'Clock</h2>
+            </div>
             <div class="menue2">
                 <img src="supermarkt.svg" alt="Einkaufswagen Bild" id="einkaufswagen2">
                 <div id="produktBubble"></div>
             </div>
             <div>
                 <p id="total"></p>
+                <p id="gesamtLoeschen">Warenkorb Löschen - klicke auf die Zahl :) </p> 
             </div>
         </div>
 
     </header>
 
     <main>
-        <div class="weinbild">
-        </div>
         <div class="warenliste">
         </div>
     </main>
