--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,6 +13,7 @@ body {
 </head>
 <body>
 	<a href="https://github.com/HannahSchmitt/GIS-SoSe-2020/issues" target="_blank">Issues</a><br>
+	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe07/Webseite.html" target="_blank">Aufgabe07, 14.06.2020</a><br>
 	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe06/Webseite.html" target="_blank">Aufgabe06, 06.06.2020</a><br>
 	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe05/Webseite.html" target="_blank">Aufgabe05, 31.05.2020</a><br>
 	<a href="https://hannahschmitt.github.io/GIS-SoSe-2020/Aufgabe04_2/Webseite.html" target="_blank">Aufgabe04, 24.05.2020</a><br>
