--- a/Aufgabe07/Warenkorb.html
+++ b/Aufgabe07/Warenkorb.html
@@ -24,7 +24,8 @@
             </div>
             <div>
                 <p id="total"></p>
-                <p id="gesamtLoeschen">Warenkorb Löschen - klicke auf die Zahl :) </p> 
+
+                <button><p id="gesamtLoeschen">Warenkorb Löschen</p></button> 
             </div>
         </div>
 
