--- a/Aufgabe07/Warenkorb.html
+++ b/Aufgabe07/Warenkorb.html
@@ -25,7 +25,7 @@
             <div>
                 <p id="total"></p>
 
-                <button><p id="gesamtLoeschen">Warenkorb Löschen</p></button> 
+                <p id="gesamtLoeschen">Warenkorb Löschen</p>
             </div>
         </div>
 
