--- a/Aufgabe08/Formular.html
+++ b/Aufgabe08/Formular.html
@@ -11,14 +11,15 @@
 
 <body>
     <h2>Melde dich hier an</h2> <br>
+    <form action="https://aufgabe8gis.herokuapp.com" method="GET">
 
-    <input type="text" name="fname"> Vorname<br>
-    <input type="text" name="nname"> Nachname<br>
-    <input type="email" name="mail"> E-Mail<br>
-    <input type="radio" name="male"> Mail <br>
-    <input type="radio" name="female"> Female<br>
-    <button type="submit">Anmelden</button>
-
+        <input type="text" name="fname"> Vorname<br>
+        <input type="text" name="nname"> Nachname<br>
+        <input type="email" name="mail"> E-Mail<br>
+        <input type="radio" name="male"> Mail <br>
+        <input type="radio" name="female"> Female<br>
+        <button type="button">Anmelden</button>
+    </form>
 </body>
 
 </html>
