--- a/Aufgabe08/Formular.html
+++ b/Aufgabe08/Formular.html
@@ -6,19 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anmelden</title>
     <script src="Skript.js" defer></script>
-    <link rel="stylesheet" href="Style.css">
 </head>
 
 <body>
     <h2>Melde dich hier an</h2> <br>
     <form action="https://aufgabe8gis.herokuapp.com" method="GET">
-
-        <input type="text" name="fname"> Vorname<br>
-        <input type="text" name="nname"> Nachname<br>
-        <input type="email" name="mail"> E-Mail<br>
-        <input type="radio" name="male"> Mail <br>
-        <input type="radio" name="female"> Female<br>
-        <button type="button">Anmelden</button>
+    <input type="text" name="fname"> Vorname<br>
+    <input type="text" name="nname"> Nachname<br>
+    <input type="email" name="mail"> E-Mail<br>
+    <input type="radio" name="male"> Mail <br>
+    <input type="radio" name="female"> Female<br>
+    <button type="button" id="button">Anmelden</button>
     </form>
 </body>
 
