--- a/Aufgabe09/Formular.html
+++ b/Aufgabe09/Formular.html
@@ -14,8 +14,8 @@
     <input type="text" name="fname"> Vorname<br>
     <input type="text" name="nname"> Nachname<br>
     <input type="email" name="mail"> E-Mail<br>
-    <input type="radio" name="male"> Mail <br>
-    <input type="radio" name="female"> Female<br>
+    <input type="radio" name="male"> Durst <br>
+    <input type="radio" name="female"> Hunger<br>
     <button type="button" id="buttonHtml">HTML ausgeben</button>
     <button type="button" id="buttonJson">JSON ausgeben</button>
     </form>
