--- a/Aufgabe10/Dokument.html
+++ b/Aufgabe10/Dokument.html
@@ -19,20 +19,20 @@
         </tr>
         <tr>
             <td>u=</td>
-            <td>undefined</td>
+            <td>Administrator</td>
             <td>username</td>
             <td>(may be omitted for local database)</td>
         </tr>
         <tr>
             <td>p=</td>
-            <td>undefined</td>
+            <td>Administrator</td>
             <td>password</td>
             <td>(required when username given)</td>
         </tr>
         <tr>
             <td>a=</td>
             <td>
-                <strong>missing</strong>
+                <strong>hannahnaha.dtfe1.mongodb.net</strong>
             </td>
             <td>database address</td>
             <td>(required, everything right of '@')</td>
@@ -40,7 +40,7 @@
         <tr>
             <td>n=</td>
             <td>
-                <strong>missing</strong>
+                <strong>Test</strong>
             </td>
             <td>database name</td>
             <td>(required)</td>
@@ -48,7 +48,7 @@
         <tr>
             <td>c=</td>
             <td>
-                <strong>missing</strong>
+                <strong>Students</strong>
             </td>
             <td>collection</td>
             <td>(required)</td>
