--- a/Aufgabe11/Dokument2.html
+++ b/Aufgabe11/Dokument2.html
@@ -12,7 +12,7 @@
     <body>
         <h3>Sende hier Deine Informationen</h3>
         
-        <form methode="GET" action="http://localhost:8100" id="myForm">
+        <form methode="GET" action="https://aufgabe8gis.herokuapp.com" id="myForm">
             <button type="button" id="send">send</button>
             <button type="button" id="get">get</button><br>
             <input type="text" name="firstname"> Firstname <br>
