--- a/Eismanufaktur/Warenkorb.html
+++ b/Eismanufaktur/Warenkorb.html
@@ -16,8 +16,9 @@
         </div>
         <div class="headercontent">
             <div class="menue2">
-                <a href="Webseite.html"> <img src="Home.png" alt="Home" id="Verkäufer"></a>
+                <a href="Webseite.html"> <img src="Home.png" alt="Home" id="Webseite"></a>
                 <div id="produktBubble"></div>
+                <a href="Verkäufer.html"> <img src="Verkäufer.png" alt="Verkäufer" id="Admin"></a>
             </div>
             <div>
                 <p id="totalVerkäufer"></p>
