--- a/Eismanufaktur/Verkäufer.html
+++ b/Eismanufaktur/Verkäufer.html
@@ -19,7 +19,7 @@
             <div class="menue2">
                 <a href="Webseite.html"> <img src="Home.png" alt="Home" id="Verkäufer"></a>
                 <div id="produktBubble"></div>
-                <p id="gesamtLoeschen">Warenkorb Löschen</p>
+                
             </div>            
             <div>
                 <p id="totalVerkäufer"></p>
@@ -29,6 +29,7 @@
     </header>
 
     <main>
+        <button type="button" id="gesamtLoeschen">Bestellungen wurden alle Bearbeitet</button>
          <!--<form methode="GET" action="http://localhost:8100" id="myForm"> !-->  
        <form methode="GET" action="https://aufgabe8gis.herokuapp.com" id="myForm"> 
             <button type="button" id="get">Daten anfragen</button> 
