--- a/Eismanufaktur/Warenkorb.html
+++ b/Eismanufaktur/Warenkorb.html
@@ -36,10 +36,10 @@
             <!--<form methode="GET" action="http://localhost:8100" id="myForm">!-->
             <form methode="GET" action="https://aufgabe8gis.herokuapp.com" id="myForm">
             
-                <input type="text" name="firstname"> Firstname <br>
-                <input type="text" name="lastname"> Lastname <br>
+                <input type="text" name="firstname"> Vorname <br>
+                <input type="text" name="lastname"> Nachname <br>
                 <input type="text" name="adress"> Adresse <br>
-                <button type="button" id="send">send</button>
+                <button type="button" id="send">Bestellung Abschicken</button>
             </form>
         </div>
     </main>
