--- a/Eismanufaktur/Warenkorb.html
+++ b/Eismanufaktur/Warenkorb.html
@@ -18,7 +18,7 @@
             <div class="menue2">
                 <a href="Webseite.html"> <img src="Home.png" alt="Home" id="Webseite"></a>
                 <div id="produktBubble"></div>
-                <a href="Verkäufer.html"> <img src="Verkauf.png" alt="Verkäufer" id="Admin"></a>
+                <a href="Verkaufer.html"> <img src="Verkauf.png" alt="Verkäufer" id="Admin"></a>
             </div>
             <div>
                 <p id="totalVerkäufer"></p>
